--- a/index.html
+++ b/index.html
@@ -95,14 +95,18 @@
   <main id="contenu-principal">
     <!-- SECTION CONTACT -->
     <section id="accueil">
-      <h1>BOSSUT Anthony</h1>
+      <h1>BOSSUT <br> Anthony</h1>
       <h2>Dévelloppeur web</h2>
       <h2>web mobile</h2>
       <p>
-        Actuellement en formation de développeur web/web mobile je suis à la
-        recherche d'un stage pour croître mes compétences en cours
-        d'acquisitions. L'adaptabilité et l'esprit d'équipe sont ce qui me
-        caractérise. Je mets ces compétences à l’œuvre dans toutes mes
+        Bonjour, je m'appelle Anthony, je suis un developeur web/web mobile.
+      </p>
+      <p>
+        Je suis à la recherche d'un stage pour enrichir et développer davantage mes compétences,
+        acquises lors de ma formation et en autodidacte.
+      </p>
+      <p>
+        Je mets ces compétences à l’œuvre dans toutes mes
         expériences professionnelles afin de saisir ce qu’il y a de plus
         intéressant dans toutes les situations.
       </p>
@@ -127,10 +131,15 @@
     <!-- SECTION CONTACT -->
     <section id="contact">
       <div>
-        <h2>Pour me contacter</h2>
+        <h2>Contactez-moi</h2>
         <p>
-          Bienvenue sur mon portfolio. Je suis Anthony bossut et je suis
-          develloppeur web , web mobile.
+          Je suis ravi que vous envisagiez de me contacter pour discuter de votre projet ou pour toute autre demande.
+          Que vous
+          ayez une question, souhaitiez en savoir plus sur mon travail, ou envisagiez une collaboration, je suis ici
+          pour écouter
+          et répondre à vos besoins. Veuillez remplir le formulaire ci-dessous avec vos détails et votre message, et je
+          vous
+          recontacterai dès que possible.
         </p>
       </div>
       <form action="email.php" method="post">
@@ -148,6 +157,7 @@
     <p>&copy; 2024 Mon Portfolio Professionnel</p>
   </footer>
   <div id="divPopup"></div>
+  <script src="./js/var.js"></script>
   <script src="./js/menuBurger.js"></script>
   <script src="./js/project.js"></script>
   <script src="./js/tech.js"></script>
