--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
       <h2>Dévelloppeur web</h2>
       <h2>web mobile</h2>
       <p>
-        Bonjour, je m'appelle Anthony, je suis un developeur web/web mobile.
+        Bonjour, je m'appelle Anthony, je suis dévelopeur web/web mobile.
       </p>
       <p>
-        Je suis à la recherche d'un stage pour enrichir et développer davantage mes compétences,
+        Je suis actuellement à la recherche d'un stage pour enrichir et développer davantage mes compétences,
         acquises lors de ma formation et en autodidacte.
       </p>
+
       <p>
         Je mets ces compétences à l’œuvre dans toutes mes
         expériences professionnelles afin de saisir ce qu’il y a de plus
