--- a/index.html
+++ b/index.html
@@ -1,169 +1,199 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio développeur web et web mobile de Anthony BOSSUT."
+    />
+    <meta
+      name="keywords"
+      content="  Anthony, bossut, développement, développeur, dev, web, web mobile, portfolio,"
+    />
+    <meta name="author" content="Anthony BOSSUT." />
+    <meta name="copyright" content="Anthony BOSSUT." />
+    <title>Anthony bossut</title>
+    <link rel="stylesheet" href="sass/dist/style.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio développeur web et web mobile de Anthony BOSSUT." />
-  <meta name="keywords" content="  Anthony, bossut, développement, développeur, dev, web, web mobile, portfolio," />
-  <meta name="author" content="Anthony BOSSUT." />
-  <meta name="copyright" content="Anthony BOSSUT." />
-  <title>Anthony bossut</title>
-  <link rel="stylesheet" href="sass/dist/style.min.css" />
-</head>
-
-<body class="light-mode">
-  <div id="btn-arrow">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-      <path
-        d="M214.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 109.3V480c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128z" />
-    </svg>
-  </div>
-  <header>
-    <div>
-      <!-- 
+  <body class="light-mode">
+    <div id="btn-arrow">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+        <path
+          d="M214.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 109.3V480c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128z"
+        />
+      </svg>
+    </div>
+    <header>
+      <div>
+        <!-- 
       -->
-      <img id="logo" src="assets/svg/logo-tech/angular.svg" alt="LOGO" />
-      <h1>Portfolio de Anthony bossut</h1>
-    </div>
-    <div id="modeToggle">
-      <p>EN CONSTRUCTION ACTIVE</p>
-    </div>
-    <div id="menu-burger">
-      <svg xmlns="http://www.w3.org/2000/svg" height="50" viewBox="0 -960 960 960" width="50">
-        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-      </svg>
-    </div>
-  </header>
-  <!-- Navbar -->
-  <nav id="menu-de-navigation">
-    <div id="menu-close">
-      <svg xmlns="http://www.w3.org/2000/svg" height="25" viewBox="0 -960 960 960" width="25">
-        <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
-      </svg>
-    </div>
-    <ul id="main-menu">
-      <li>
-        <a href="#accueil" class="link" onclick="{closeMenu()}">
-          <img src="assets/svg/menu/home.svg" alt="Accueil" />
-          <p>Accueil</p>
-        </a>
-      </li>
-      <li>
-        <a href="#a-propos" class="link" onclick="{closeMenu()}">
-          <img src="assets/svg/menu/person.svg" alt="Parcour de anthony bossut" />
-          <p>À Propos</p>
-        </a>
-      </li>
-      <li>
-        <a href="#projets" class="link" onclick="{closeMenu()}">
-          <img src="assets/svg/menu/wrench.svg" alt="Mes projets" />
-          <p>Mes Projets</p>
-        </a>
-      </li>
-      <li>
-        <a href="#technologies" class="link" onclick="{closeMenu()}">
-          <img src="assets/svg/logo-tech/javascript.svg" alt="Technologies" />
-          <p>Technologies</p>
-        </a>
-      </li>
-      <!-- 
+        <img id="logo" src="assets/svg/logo-tech/angular.svg" alt="LOGO" />
+        <h1>Portfolio de Anthony bossut</h1>
+      </div>
+      <div id="modeToggle">
+        <p>EN CONSTRUCTION ACTIVE</p>
+      </div>
+      <div id="menu-burger">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="50"
+          viewBox="0 -960 960 960"
+          width="50"
+        >
+          <path
+            d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
+          />
+        </svg>
+      </div>
+    </header>
+    <!-- Navbar -->
+    <nav id="menu-de-navigation">
+      <div id="menu-close">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="25"
+          viewBox="0 -960 960 960"
+          width="25"
+        >
+          <path
+            d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
+          />
+        </svg>
+      </div>
+      <ul id="main-menu">
+        <li>
+          <a href="#accueil" class="link" onclick="{closeMenu()}">
+            <img src="assets/svg/menu/home.svg" alt="Accueil" />
+            <p>Accueil</p>
+          </a>
+        </li>
+        <li>
+          <a href="#a-propos" class="link" onclick="{closeMenu()}">
+            <img
+              src="assets/svg/menu/person.svg"
+              alt="Parcour de anthony bossut"
+            />
+            <p>À Propos</p>
+          </a>
+        </li>
+        <li>
+          <a href="#projets" class="link" onclick="{closeMenu()}">
+            <img src="assets/svg/menu/wrench.svg" alt="Mes projets" />
+            <p>Mes Projets</p>
+          </a>
+        </li>
+        <li>
+          <a href="#technologies" class="link" onclick="{closeMenu()}">
+            <img src="assets/svg/logo-tech/javascript.svg" alt="Technologies" />
+            <p>Technologies</p>
+          </a>
+        </li>
+        <!-- 
       </ul>
       <ul id="link-social">
     -->
-      <li>
-        <a href="https://www.linkedin.com/in/anthony-bossut-56b1385b/" target="_blank" onclick="{closeMenu()}"><img
-            src="assets/svg/menu/LinkedIn_icon.svg" alt="Linked" />
-          <p>Linked</p>
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/kurtounet" target="_blank" onclick="{closeMenu()}"><img
-            src="assets/svg/logo-tech/github.svg" alt="Mon github" />
-          <p>Github</p>
-        </a>
-      </li>
-      <li>
-        <a href="#contact" onclick="{closeMenu()}"><img src="assets/svg/menu/email.svg" alt="Formulaire de contact" />
-          <p>Contact</p>
-        </a>
-      </li>
-    </ul>
-  </nav>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/anthony-bossut-56b1385b/"
+            target="_blank"
+            onclick="{closeMenu()}"
+            ><img src="assets/svg/menu/LinkedIn_icon.svg" alt="Linked" />
+            <p>Linked</p>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/kurtounet"
+            target="_blank"
+            onclick="{closeMenu()}"
+            ><img src="assets/svg/logo-tech/github.svg" alt="Mon github" />
+            <p>Github</p>
+          </a>
+        </li>
+        <li>
+          <a href="#contact" onclick="{closeMenu()}"
+            ><img src="assets/svg/menu/email.svg" alt="Formulaire de contact" />
+            <p>Contact</p>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-  <main id="contenu-principal">
-    <!-- SECTION CONTACT -->
-    <section id="accueil">
-
-      <h1>BOSSUT <br> Anthony</h1>
-      <h2>Dévelloppeur web</h2>
-      <h2>web mobile</h2>
-      <p>
-        Bonjour, je m'appelle Anthony, je suis dévelopeur web/web mobile.
-      </p>
-      <p>
-        Je suis actuellement à la recherche d'un stage pour enrichir et développer davantage mes compétences,
-        acquises lors de ma formation et en autodidacte.
-      </p>
-
-      <p>
-        Je mets ces compétences à l’œuvre dans toutes mes
-        expériences professionnelles afin de saisir ce qu’il y a de plus
-        intéressant dans toutes les situations.
-      </p>
-    </section>
-    <!-- SECTION CONTACT -->
-    <section id="a-propos">
-      <h2>Mon parcourt Pro</h2>
-      <div id="list-jobs" class="flex-col-center"></div>
-    </section>
-    <section id="projets">
-      <h2>Mes Projets</h2>
-      <div id="article-projet"></div>
-    </section>
-    <!-- SECTION TECHNO -->
-    <section id="technologies">
-      <h2>Technologies</h2>
-      <p>Technologies utilisées :</p>
-      <div id="divTechno"></div>
-    </section>
-
-    <!-- SECTION CONTACT -->
-    <section id="contact">
-      <div>
-        <h2>Contactez-moi</h2>
+    <main id="contenu-principal">
+      <!-- SECTION CONTACT -->
+      <section id="accueil">
+        <h1>
+          BOSSUT <br />
+          Anthony
+        </h1>
+        <h2>Dévelloppeur web</h2>
+        <h2>web mobile</h2>
+        <p>Bonjour, je m'appelle Anthony, je suis dévelopeur web/web mobile.</p>
         <p>
-          Je suis ravi que vous envisagiez de me contacter.
-          Veuillez remplir le formulaire ci-dessous avec vos détails et votre message,
-          et je vous recontacterai dès que possible.
+          Je suis actuellement à la recherche d'un stage pour enrichir et
+          développer davantage mes compétences, acquises lors de ma formation et
+          en autodidacte.
         </p>
-      </div>
-      <form action="email.php" method="post">
-        <label for="nom">Votre nom * :</label>
-        <input type="text" id="nom" name="nom" required />
-        <label for="prenom">Votre prénom * :</label>
-        <input type="text" id="nom" name="nom" required />
-        <label for="email">Votre email * :</label>
-        <input type="email" id="email" name="email" required />
-        <label for="tel">Votre téléphone :</label>
-        <input type="tel" id="tel" name="tel" />
-        <label for="message">Message * :</label>
-        <textarea id="message" name="message" rows="10" required></textarea>
-        <button type="submit">Envoyer</button>
-      </form>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 Anthony BOSSUT</p>
-  </footer>
-  <div id="divPopup"></div>
-  <script src="./js/var.js"></script>
-  <script src="./js/menuBurger.js"></script>
-  <script src="./js/project.js"></script>
-  <script src="./js/tech.js"></script>
-  <script src="./js/job.js"></script>
-  <script src="./js/scrollToTop.js"></script>
-</body>
 
+        <p>
+          Je mets ces compétences à l’œuvre dans toutes mes expériences
+          professionnelles afin de saisir ce qu’il y a de plus intéressant dans
+          toutes les situations.
+        </p>
+      </section>
+      <!-- SECTION CONTACT -->
+      <section id="a-propos">
+        <h2>Mon parcours Pro</h2>
+        <div id="list-jobs" class="flex-col-center"></div>
+      </section>
+      <section id="projets">
+        <h2>Mes Projets</h2>
+        <div id="article-projet"></div>
+      </section>
+      <!-- SECTION TECHNO -->
+      <section id="technologies">
+        <h2>Technologies</h2>
+        <p>Technologies utilisées :</p>
+        <div id="divTechno"></div>
+      </section>
+
+      <!-- SECTION CONTACT -->
+      <section id="contact">
+        <div>
+          <h2>Contactez-moi</h2>
+          <p>
+            Je suis ravi que vous envisagiez de me contacter. Veuillez remplir
+            le formulaire ci-dessous avec vos détails et votre message, et je
+            vous recontacterai dès que possible.
+          </p>
+        </div>
+        <form action="https://formspree.io/f/xdoqdabk" method="POST">
+          <label for="nom">Votre nom * :</label>
+          <input type="text" id="nom" name="nom" required />
+          <label for="prenom">Votre prénom * :</label>
+          <input type="text" id="nom" name="nom" required />
+          <label for="email">Votre email * :</label>
+          <input type="email" id="email" name="email" required />
+          <label for="tel">Votre téléphone :</label>
+          <input type="tel" id="tel" name="tel" />
+          <label for="message">Message * :</label>
+          <textarea id="message" name="message" rows="10" required></textarea>
+          <button type="submit">Envoyer</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2024 Anthony BOSSUT</p>
+    </footer>
+    <div id="divPopup"></div>
+    <script src="./js/var.js"></script>
+    <script src="./js/menuBurger.js"></script>
+    <script src="./js/project.js"></script>
+    <script src="./js/tech.js"></script>
+    <script src="./js/job.js"></script>
+    <script src="./js/scrollToTop.js"></script>
+  </body>
 </html>
