--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <!-- SECTION CONTACT -->
       <section id="a-propos">
         <h2>Mon parcours Pro</h2>
-        <ul id="list-jobs" class="flex-col-center"></ul>
+        <ul id="list-jobs"></ul>
       </section>
       <section id="projets">
         <h2>Mes Projets</h2>
